# wechat-style-distiller

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: thinking_profile.example.json
examples/: make_sample.py  sample_chatlog.json
output/samples/: persona_prompt.groups.txt  persona_prompt.one_on_one.txt  persona_prompt.txt  profile.groups.md  profile.md  profile.one_on_one.md  stats.json
scripts/: setup_chatlog.sh
src/wechat_style_distiller/: __init__.py  analyze.py  chatbot.py  clean.py  cli.py  config.py  distill.py  evaluate.py  extract.py  prompts.py  refine.py  registers.py  schema.py
tests/: test_pipeline.py
